[package]
name = "mpix"
version = "0.1.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures-util-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
hyper = "0.12"
http = "0.1"
flate2 = "1"
regex = "1"
lazy_static = "1"
chrono = "0.4"
slog = "2"
slog-async = "2"
slog-term = "2"
slog-json = "2"
